--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "react-use": "^17.4.0",
     "styled-components": "^6.1.0",
     "swiper": "^11.0.3",
     "typewriter-effect": "^2.21.0"
